# csa

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  GNUmakefile  MANIFEST.in  Makefile  Makefile.am  NEWS  README  README.md  RELEASE  TODO  aclocal.sh  autogen.sh  configure.ac  setup.py
continuous_integration/: test_script.sh
csa/: ChangeLog  __init__.py  __init__.py.in  _elementary.py  _misc.py  closure.py  conngen.py  connset.py  csaobject.py  elementary.py  geometry.py  intervalset.py  misc.py  plot.py  valueset.py  version.py
debian/: changelog  control  copyright  rules
doc/: ChangeLog  tutorial.tex
doc/manual/: basicfunc.rst  datatypes.rst  geometry.rst  index.rst  intro.rst  random.rst  tutorial.rst
examples/: catLGNV1.py
libpycsa/: Makefile.am  pycsa.cpp  pycsa.h
tests/: test_csa.py
